--- a/dataset/login.html
+++ b/dataset/login.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width,initial-scale=1" />
- <title>Login • VIT Parking Demo</title>
+ <title>Login • VIT Parking </title>
  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -12,12 +12,12 @@
  <div class="logo">VP</div>
  <div>
  <div class="title">VIT Parking Model</div>
- <div class="kv">Professional IoT with integrated backend</div>
+ <div class="kv">Professional IoT with Integrated backend</div>
  </div>
  </div>
 
  <nav class="nav" role="navigation" aria-label="Main">
- <a href="index.html">Dashboard</a>
+ 
  <a href="about.html">About</a>
  </nav>
  </header>
@@ -59,7 +59,7 @@
  </section>
  </main>
 
- <footer class="site-footer">© 2025 VIT Smart Parking Demo</footer>
+ <footer class="site-footer">© 2025 VIT Smart Parking </footer>
 
  <script>
 const ADMIN_EMAILS = [
