--- a/dataset/index.html
+++ b/dataset/index.html
@@ -9,6 +9,7 @@
 
 <body>
 
+<!-- ================= HEADER ================= -->
 <header class="header container">
   <div class="brand">
     <div class="logo">VP</div>
@@ -28,6 +29,7 @@
   </nav>
 </header>
 
+<!-- ================= MAIN ================= -->
 <main class="container">
 
   <!-- SYSTEM STATUS -->
@@ -38,19 +40,19 @@
         <div class="kv">Realtime Firebase feed</div>
       </div>
 
-      <div id="statusBadge" class="status-badge">
+      <div class="status-badge">
         <span id="statusDot" class="status-dot"></span>
         <span id="statusText" style="font-weight:700;margin-left:6px">ONLINE</span>
       </div>
     </div>
   </section>
 
-  <!-- SINGLE SLOT -->
+  <!-- SLOT CARD -->
   <section class="grid">
     <div class="slot card">
       <div class="meta">
         <h4>Slot 1 — Entrance</h4>
-        <div id="slot1" class="pill vacant">Waiting for data…</div>
+        <div id="slot1" class="pill vacant">Waiting…</div>
       </div>
 
       <div style="height:10px"></div>
@@ -77,31 +79,28 @@
 </main>
 
 <footer class="site-footer">
-  Contact: neel.1251030298@vit.edu • © 2025 VIT Smart Parking Demo
+  Contact: FY AIML‑C G6 • © 2025 VIT Smart Parking Demo
 </footer>
 
+<!-- ================= SCRIPT ================= -->
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-app.js";
-import { getDatabase, ref, onValue, set } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-database.js";
+import { getDatabase, ref, onValue, update } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-database.js";
 
-/* ================= AUTH ================= */
+/* ---------- AUTH ---------- */
 if (localStorage.getItem("isLoggedIn") !== "true") {
   window.location.href = "login.html";
 }
 
 const USER_ROLE = localStorage.getItem("userRole");
-const USER_EMAIL = localStorage.getItem("userEmail");
-
 document.getElementById("roleBadge").textContent =
   USER_ROLE === "admin" ? "ADMIN" : "VIEWER";
 
 if (USER_ROLE !== "admin") {
-  document.querySelectorAll(".admin-only").forEach(el => {
-    el.style.display = "none";
-  });
+  document.querySelectorAll(".admin-only").forEach(el => el.style.display = "none");
 }
 
-/* ================= FIREBASE ================= */
+/* ---------- FIREBASE ---------- */
 const firebaseConfig = {
   apiKey: "AIzaSyCpWOqKcUI5kDRqF3yQAKpr0PXMiDIOQT4",
   authDomain: "smart-parking-fb76f.firebaseapp.com",
@@ -114,9 +113,9 @@ const firebaseConfig = {
 
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
-const slotRef = ref(db, "parking/slot1/status");
+const slotRef = ref(db, "parking/slot1");
 
-/* ================= DOM ================= */
+/* ---------- DOM ---------- */
 const slotEl = document.getElementById("slot1");
 const timeEl = document.getElementById("slot1Time");
 const logEl = document.getElementById("logArea");
@@ -128,32 +127,44 @@ function log(msg) {
     `[${new Date().toLocaleTimeString()}] ${msg}\n` + logEl.textContent;
 }
 
-/* ================= LISTEN ================= */
+/* ---------- LISTENER ---------- */
 onValue(slotRef, snapshot => {
-  const status = snapshot.val();
-  if (!status) return;
+  const data = snapshot.val();
+  if (!data || !data.status) return;
 
-  const empty = status === "empty";
-  slotEl.textContent = empty ? "VACANT" : "FULL";
-  slotEl.className = "pill " + (empty ? "vacant" : "full");
+  const status = data.status; // ✅ CORRECT
+  const isEmpty = status === "empty";
+
+  slotEl.textContent = isEmpty ? "VACANT" : "FULL";
+  slotEl.className = "pill " + (isEmpty ? "vacant" : "full");
+
   timeEl.textContent = new Date().toLocaleString();
-
   statusDot.style.background = "var(--success)";
   statusText.textContent = "ONLINE";
 
-  log(`Slot → ${slotEl.textContent}`);
+  log(`Slot → ${status}`);
 });
 
-/* ================= ADMIN WRITE ================= */
+
+
+/* ---------- ADMIN CONTROLS ---------- */
 document.getElementById("markVacant")?.addEventListener("click", () => {
-  if (USER_ROLE === "admin") set(slotRef, "empty");
+  if (USER_ROLE !== "admin") return;
+  update(slotRef, {
+    status: "empty",
+    timestamp: Date.now()
+  });
 });
 
 document.getElementById("markFull")?.addEventListener("click", () => {
-  if (USER_ROLE === "admin") set(slotRef, "two_wheeler");
+  if (USER_ROLE !== "admin") return;
+  update(slotRef, {
+    status: "two_wheeler",
+    timestamp: Date.now()
+  });
 });
 
-/* ================= LOGOUT ================= */
+/* ---------- LOGOUT ---------- */
 document.getElementById("logout").addEventListener("click", () => {
   localStorage.clear();
 });
@@ -161,4 +172,3 @@ document.getElementById("logout").addEventListener("click", () => {
 
 </body>
 </html>
-
